bases/nexus-backup-api/1.0.0/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-backup-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-backup-api
  template:
    metadata:
      labels:
        app: nexus-backup-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      serviceAccountName: nexus-backup-api-sa
      containers:
        - name: nexus-backup-api
          image: ghcr.io/synapsehealthtech/nexus-backup-api:v0.0.3
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: oci-token
              mountPath: /var/run/secrets/oci
              readOnly: true
      volumes:
        - name: oci-token
          projected:
            sources:
              - serviceAccountToken:
                  audience: oci
                  expirationSeconds: 7200
                  path: token
