bases/nexus-backup-api/1.0.0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-backup-api
spec:
  selector:
    app: nexus-backup-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
